<resources>
    <string name="app_name">Mentawai Tour</string>
    <string name="museo_sans_rounded_100">fonts/MuseoSansRounded-100.otf</string>
    <string name="museo_sans_rounded_300">fonts/MuseoSansRounded-300.otf</string>
    <string name="museo_sans_rounded_500">fonts/MuseoSansRounded-500.otf</string>
    <string name="museo_sans_rounded_700">fonts/MuseoSansRounded-700.otf</string>
    <string name="aileuita">Aileuita</string>
    <string name="welcome">Welcome</string>
    <string name="how_are_you">"how are you"</string>
    <string name="loading">loading your profile</string>
    <string name="splash_title">The Government of Mentawai Island Regency\nThe West Sumatera Province</string>
    <string name="mentawai_surf_and_tourism">Mentawai Surf And Tourism</string>
    <string name="mentawai_surf_and_tourism_1">Mentawai\nSurf And\nTourism</string>
    <string name="mentawai_islands">Mentawai Islands</string>
    <string name="local_wisdom">Local Wisdom</string>
    <string name="local_wisdom_details">Local Wisdom of Arat Sabulungan</string>
    <string name="world_oldest_tattoo">World Oldest Tattoo</string>
    <string name="world_oldest_tattoo_details">The World Oldest Tattoo</string>
    <string name="attractions">Attractions</string>
    <string name="attractions_details">The Cultural Attractions Of Mentawai</string>
    <string name="nature">Nature</string>
    <string name="nature_details">Nature Mentawai</string>
    <string name="surfing_retribution">Surfing Retribution</string>
    <string name="surfing_spot">Surfing Spot</string>
    <string name="tides">Tides</string>
    <string name="tourism_information_center">Tourism Information Center</string>
    <string name="living_on_board">Living On Board</string>
    <string name="resorts">Resorts</string>
    <string name="homestay">Homestay</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="island_life">Island Life</string>
    <string name="how_to_mentawai">How To Mentawai</string>
    <string name="mentawai_island_content" formatted="false">Before explore this “piece of paradise”, it is worth
    noted that it is part of West Sumatera Province covers 6.011,35 km2 wide with coast line
    stretched 1.402,66 km2 long. Geographically, Mentawai islands is separated from West Sumatera Province, bordered with Siberut
    strait on the South, Indian Ocean on the North, Mentawai strait on the East, and Indian Ocean on the West.&lt;br /&gt; &lt;br /&gt;
    Before being mesmerized by the beauty of curling waves of Mentawai, which is dreamt by surfers from around the world, and cradling in
    the adventurous inland of Siberut, let us have a look to the profile of Mentawai to have a good
    understanding about the destinations.&lt;br /&gt; &lt;br /&gt;
    Mentawai mainland covers 85 % forest. Within that percentage, 70 % is idle land and 25 % are rice fields, moor, mixed farms and plantations.
    Meanwhile the residential or housing area is only 3,042 hectares wide or 0.51 percent of the
    total area.&lt;br /&gt; &lt;br /&gt;
    Mentawai regency has Tuapeijat as the capital, located in North Sipora district with 153km2 distance to Padang. Sea route and transport is
    the main access to reach the island from Padang, so as with local inter island transport especially between districts in Mentawai. The population
    of Mentawai Islands based on 2011 statistic was 77,078 people consisting of 40,632 male and 36,446 female.&lt;br /&gt; &lt;br /&gt;
    From the illustration, we could now imagine that this regency stretch in a coastal areas with 95
    small uninhabited islands that scattered through four main islands of Siberut, Sipora, North and South Pagai Island.&lt;br /&gt; &lt;br /&gt;
    Other useful information is that it is easier to access the coastal area in shore than travel deep
    onto the inland. This is because the infrastructure such as road and land transport is still very
    limited. For the entire district, the total length of the road is 465 miles.&lt;br /&gt; &lt;br /&gt;
    According to the data, there are 13 seaports built around the four main islands. From the total 13 ports, eight of them are concrete construction, one iron construction, two constructed from
    timber, and two others are mix but for fish auction. The district distribution are as followed: three ports in Sikakap District, three ports in the District of North and South Sipora, three ports in the District of South Siberut, and one port in theDistrict of North Siberut.&lt;br /&gt; &lt;br /&gt;
    Through these sea transport facilities, tourists can explore the beauty of the sea sights in the four main islands of Mentawai. If the weather
    and wave conditions are favorable, tourists can commute comfortably in and around Mentawai islands. Tourist can also make a stop over or visit
    some spots along the beaches. If the weather is good, chartered boats can anchored and parked at any location conveniently.&lt;br /&gt; &lt;br /&gt;
    The Local Government of Mentawai District recorded 65 different kinds of tourist attractions in the area, which spread over in ten districts.
    From 65 tourist attractions, 21 of the attractions are natural scenery or scenic landscapes, 29
    </string>
    <string name="local_wisdom_content" formatted="false">The Mentawai Islands regency offers many
    charming natural tourism attractions. Perfect
    waves for surfing, beautiful underwater park, and
    white sandy beaches are few examples of them.
    The complement of this combination named
    “one of God’s masterpiece on earth”.&lt;br /&gt; &lt;br /&gt;
    Unlike most tourist destinations, which have
    been touched by modernity, Mentawai Islands
    keep the humbleness in traditional identity. In
    some parts of the area, the authentic traditional
    way of life is remained protected by the local
    tribe due to their belief of “destroying forest
    means destroying life”.&lt;br /&gt; &lt;br /&gt;
    The essential belief of indigenous Mentawaians
    says every living thing has its own spirit. They
    believe that forest is a dwelling place of the
    ancestors’ spirits who protect all plants and
    animals. Therefore, they have to treat the
    nature wisely and respectfully. The belief to the
    ancestors’ spirit and the wisdom to the nature
    for indigenous Mentawaians is called Arat
    Sabulungan.&lt;br /&gt; &lt;br /&gt;The evidence that indigenous Mentawaians
    respect the forest can be seen from the
    presence of leaves as the primary element in
    every Mentawaian traditional ceremony. The
    leaves are believed having healing powers. They
    even believe that the leaves are able to connect
    people with the Ruler of the universe. They called
    this belief as Ulau Manua.&lt;br /&gt; &lt;br /&gt;
    Before cutting down a tree, the indigenous
    traditional Mentawaians do a ritual called Punen
    or Lia. This ritual is about asking permission
    to “the Spirit of the forest”. They also have to
    replace the felled off tree with a new one. This
    local wisdom is inherited and passed down
    from generation to generation. They believed
    that trees give life to human. This local wisdom
    attached tightly in the heart of Mentawai
    indigenous people.&lt;br /&gt; &lt;br /&gt;
    As the result, humans and nature live
    harmoniously in hinterland of Mentawai. The
    sustainability of forest protection will ensure the
    preservation of the ecosystem. As the evidence,
    endemic wildlife and flora still can be found in
    the Mentawai Islands.&lt;br /&gt; &lt;br /&gt;
    </string>
    <string name="world_oldest_content" formatted="false">Adi Rosa, a professor of Fine Arts from State
    University of Padang - West Sumatera, argued
    that Mentawai tribe has been tattooing their
    body since their arrival to the west coast of
    Sumatera in 1500 BC - 500 BC ago. It means
    Mentawai tattoo is one of the oldest tattoo in
    the world.&lt;br /&gt; &lt;br /&gt;
    The tattoo is made by a Sipatiti (tattooist). The
    preparation of tattooing takes quite a long time,
    which can be up to several months. There are
    various ceremonies and taboos that must be
    passed by a person who wants to be tattooed.&lt;br /&gt; &lt;br /&gt;
    Not everybody is able to pass through this stage.
    Needles that are used to tattoo are made from
    animal bone or sharpened Karai wood. The
    needle then wrought on the skin to create lines
    that become the main motif of Mentawai tribe
    tattoo. The dye is derived from charcoal that
    sticks in the cauldron. Usually, the process of
    tattooing starts from the palms, hands, feet, and
    body. After tattooing for several days, the skin
    that tattooed will swell and bleed.&lt;br /&gt; &lt;br /&gt;
    Tattoo for Mentawai tribe is a symbol. Therefore,
    each streak and line has philosophical meaning.
    Besides describing the balance of the universe, it
    also contains the values of local wisdom that is
    inherited through generations.&lt;br /&gt; &lt;br /&gt;
    According to Mentawai tribe, the main function
    of tattoo is to show identity and social status
    or profession. The tattoos of Sikerei (shaman)
    is different with tattoo of a hunter. The tattoo
    of a hunter will be identified from their sketch
    of hunted animals, such as pigs, deer, monkeys,
    birds, or crocodiles. The Sikerei’s tattoos can
    be identified by “stars motif tattoo” known as
    Sibalu- balu.&lt;br /&gt; &lt;br /&gt;
    In short, tattoo for the indigenous people of
    Mentawai is a purification stage of body and soul
    in order to achieve perfect harmony with the
    spirit of the universe.</string>
</resources>