<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magenta"
    tools:context="mobile.android.mentawaitour.SplashScreenActivity">

    <LinearLayout
        android:layout_marginBottom="20sp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <View
                android:id="@+id/view"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/yellow"
                android:layout_width="60dp"
                android:layout_height="10dp" />

            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/surf_loading"
                android:layout_width="150dp"
                android:layout_height="88dp" />

        </RelativeLayout>

        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/museo_sans_rounded_500"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/loading"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@mipmap/ailueta"
            android:layout_width="270dp"
            android:layout_height="120dp" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/museo_sans_rounded_500"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/how_are_you"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/pemda"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <ImageView
                android:layout_alignParentRight="true"
                android:src="@mipmap/wonderful_indo"
                android:layout_width="180dp"
                android:layout_height="80dp" />

        </RelativeLayout>

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:layout_marginTop="10dp"
            app:font="@string/museo_sans_rounded_500"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/splash_title"
            android:textSize="15sp" />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@mipmap/mtic"
            android:layout_width="220dp"
            android:layout_height="120dp" />

    </LinearLayout>

</RelativeLayout>
